Lint Updates